My Pack Driver Functionality

--- a/DLivr/src/app/pages/mypackagesdriver/mypackagesdriver.page.scss
+++ b/DLivr/src/app/pages/mypackagesdriver/mypackagesdriver.page.scss
@@ -7,8 +7,6 @@ $grey-color: rgb(114, 114, 114);
 ion-content{
     align-content: center;
 }
-
-
 ion-toolbar {
     --ion-background-color:  rgb(46, 46, 46);
 }
@@ -22,9 +20,37 @@ ion-title {
 }
 
 @media only screen and (max-width: 600px) {
-    ion-title {
-      padding-right: 15%;
+    ion-card-header {
+    //   padding-right: 15%;
+    padding: 0%;
     }
+    // ion-text{
+    //     padding: 4px 0px 4px;
+    //  }
+    ion-text{
+        padding:0%;
+        font-size: 11px;
+    }
+    .textFormDet{
+        font-weight: bold;
+        font-size: 10px;
+        margin: 0px 0px 0px 15px;
+        padding: 0px 0px 0px 0px;
+     }
+     .textForm{
+        font-weight: bold;
+        font-size: 11px;
+        margin: 0px 0px 0px 0px;
+        padding: 0px 0px 0px 0px;
+        margin-left: 0%;
+     }
+     ion-card-content{
+        //  margin-top: -15px;
+          padding: -5px 0px 0px 0px;
+          color: rgb(73, 73, 73);
+          margin: 0px 0px 0px 0px;
+      }
+      
   }
 #addbutton{
     --ion-background-color:rgb(36,35,35);
@@ -47,10 +73,10 @@ ion-card-subtitle{
     margin-top: -2px;
     font-size: 13px;
  }
- 
 
 ion-card-content{
-    margin-top: -15px;
+  //  margin-top: -15px;
+    padding: 5px 0px 0px 2px;
     color: rgb(73, 73, 73);
 }
 
@@ -71,14 +97,6 @@ ion-card-header{
     background: rgb(219, 219, 219);
 }
 
-#markAsDeliveredButton{
-    background: $green-color;
-}
-
-#cancelButton{
-    background: $red-color;
-}
-
 
 @media only screen and (max-width: 700px) {
     
@@ -97,17 +115,57 @@ ion-card-header{
      }
  
      ion-card-content{
-         margin-top: -10px;
-         font-size: 12px;
+        //  margin-top: -15px;
+          padding: 0px 0px 0px 0px;
+          margin: 0px 0px 0px 0px;
+          color: rgb(73, 73, 73);
+      }
+     ion-text{
+        padding: 0px 0px 0px;
+     }
+    
+     .textFormDet{
+        font-weight: bold;
+        margin: 0px 0px 0px 0px;
+        padding: 0px 0px 0px;
+     }
+     .textForm{
+        font-weight: bold;
+        margin-left: 0px;
+        // padding-bottom: 5px;
      }
  } 
 
  .textForm{
     font-weight: bold;
     margin-left: 14px;
-    padding-bottom: 5px;
+    // padding-bottom: 5px;
  }
-
+ .textFormDet{
+    font-weight: bold;
+    font-size: 10px;
+    margin: 0px 0px 0px 40px;
+    padding: 0px 0px 0px 0px;
+ }
+//  .textFormSpecialDet{
+//     font-weight: bold;
+//     margin-left: 14px;
+//     padding-bottom: 0px;
+//  }
+// .textFormDetHeight{
+//     font-weight: bold;
+//     margin: 0px 0px 0px 14px;
+//     padding:4px;
+// }
+// .textFormSender{
+//     font-weight: bold;
+//     margin: 0px 0px 0px 14px;
+//     padding:0px;
+// }
  .textForm2{
     margin-left: 14px;
+ }
+ ion-text{
+    padding: 0px 0px 0px;
+  
  }
