--- a/DLivr/src/app/pages/mypackages/mypackages.page.scss
+++ b/DLivr/src/app/pages/mypackages/mypackages.page.scss
@@ -1,5 +1,5 @@
 $height100 : 100%;
-$green-color: rgb(83, 167, 83);
+$green-color: rgb(78, 238, 91);
 $black-color: rgb(41, 41, 41);
 $red-color: rgb(194, 61, 61);
 $grey-color: rgb(114, 114, 114);
@@ -136,7 +136,7 @@ p{
     width: 25%;
     background: $green-color;
     color: black;
-    border-radius: 5px;
+    // border-radius: 5px;
     font-weight: 13%;
 }
 
@@ -215,7 +215,7 @@ p{
 
 @media only screen and (max-width: 700px) {
    #addpackage{
-       width: 70%;
+       width: 100%;
    }
    
    ion-card{
