--- a/DLivr/src/app/pages/homedriver/homedriver.page.html
+++ b/DLivr/src/app/pages/homedriver/homedriver.page.html
@@ -10,89 +10,78 @@
 
 <ion-content>
 
-    <ion-grid id ="myDriverPackages">
+    <!--create a element for map. #Map - identifier -->
+    <div #Map class="map"></div>
 
-        <ion-row>
-          <ion-col id = "cardList">
-              <div id ="text">
-                  <p id ="nearestPack"> Nearest packages </p>
-                </div>
-            <ion-card >
-              <ion-item  id="label1" lines="none" color="grey">
-                  
-                <ion-label > 
-                    <!-- <ion-card-content > -->
-                        <ion-card-title id="TeddyBear">TeddyBear from Alina</ion-card-title>  
-                         <!-- </ion-card-content>     -->
-                         <!-- <ion-card-content > -->
-                            <ion-text id="distance">Distance: 200m</ion-text><br/><br/>
-                           <!-- </ion-card-content> -->
-                  <ion-card-content no-padding >
-                 <ion-text id="pickup">  Pickup Address: </ion-text> 
-                 <ion-text id="pickupAddress"> Bulevardul Carol I nr. 31</ion-text>
-                  </ion-card-content>
-                  <ion-card-content no-padding >
-                 <ion-text id="deliver">  Deliver Address: </ion-text>
-                 <ion-text id="deliverAddress"> Super Copou</ion-text>
-                  </ion-card-content>
+  <ion-card color="dark">
+    <ion-label color="primary" style="padding-left: 20px;">Start Point Information</ion-label>
+    <ion-item>
+      <ion-label color="light">
+        Pickup Address
+        <p>Strada Mugurelui Uscat</p>
+      </ion-label>
+      <ion-icon name="pin" color="primary" slot="start"></ion-icon>
+    </ion-item>
+    <ion-item>
+        <ion-label color="light">
+          Phone Number Package Sender
+          <p>0743335564</p>
+        </ion-label>
+        <ion-icon name="call" color="primary" slot="start"></ion-icon>
+      </ion-item>
+
+
+
+    <ion-label color="secondary" style="padding-left: 20px;">End Point Information</ion-label>
+    <ion-item>
+      <ion-label color="light">
+        Deliver Address
+        <p>Strada Mugurelui Umed</p>
+      </ion-label >
+      <ion-icon name="pin" color="secondary" slot="start"></ion-icon>
+    </ion-item>
+    <ion-item>
+        <ion-label color="light">
+          Package Receiver's Name
+          <p>Marian Vanghelie</p>
+        </ion-label>
+        <ion-icon name="person" color="secondary" slot="start"></ion-icon>
+      </ion-item>
+
+    <ion-item>
+        <ion-label color="light">
+          Phone Number Package Receiver
+          <p>0743335564</p>
+        </ion-label>
+        <ion-icon name="call" color="secondary" slot="start"></ion-icon>
+      </ion-item>
+
+      <ion-label color="warning" style="padding-left: 20px;">Package Details</ion-label>
+    <ion-item>
+        <ion-label color="light">
+        <p> Kilograms: 12</p>
+        <p> Length: 12</p>
+        <p> Width: 12</p>
+        <p> Height: 1 </p>
+      
+      </ion-label>
+          
+        <ion-icon name="information-circle" color="warning" slot="start"></ion-icon>
+      </ion-item>
+
+      <ion-label color="tertiary" style="padding-left: 20px;">Delivery Details</ion-label>
+    <ion-item>
+        <ion-label color="light">
+        <p> Distance: 12 km.</p>
+        <p> Estimated payment: 34.5$</p>
+      </ion-label>
+          
+        <ion-icon name="navigate" color="tertiary" slot="start"></ion-icon>
+      </ion-item>
+
+      <ion-button style="margin-top: 10px;" id = "register" size="medium"  color = "success" expand="full" routerLink = "#">ACCEPT PACKAGE</ion-button>
+  
+  </ion-card>
     
-                  <ion-card-content no-padding >
-                      <br/> <ion-text id="pickupHours"> Available Pickup Hours</ion-text>
-                  </ion-card-content>
-                  <ion-card-content no-padding>
-                     <ion-text>Monday, 12:30 - 14:00</ion-text> 
-                    </ion-card-content>
-                    <ion-card-content no-padding>
-                        <ion-text>Thurday, 12:30 - 14:00 , 16:30 - 17:30</ion-text>
-                      </ion-card-content>
-                      <ion-button  size="large" id="acceptCard" (click)="accept()" expand="full" fill="clear" >Accept</ion-button>
-                </ion-label>
-                
-              </ion-item>
-            
-            </ion-card>
-          </ion-col>
-        </ion-row>
-
-        <ion-row>
-            <ion-col id = "cardList">
-              <ion-card >
-                <ion-item  id="label1" lines="none" color="grey">
-                    
-                  <ion-label > 
-                      <!-- <ion-card-content > -->
-                          <ion-card-title id="TeddyBear">School stuff from Bob</ion-card-title>  
-                           <!-- </ion-card-content>     -->
-                           <!-- <ion-card-content > -->
-                              <ion-text id="distance">Distance: 300m</ion-text><br/><br/>
-                             <!-- </ion-card-content> -->
-                    <ion-card-content no-padding >
-                   <ion-text id="pickup">  Pickup Address: </ion-text> 
-                   <ion-text id="pickupAddress"> str. Anastasie Panu nr. 60</ion-text>
-                    </ion-card-content>
-                    <ion-card-content id="breakingwords" no-padding >
-                   <ion-text id="deliver">  Deliver Address: </ion-text>
-                   <ion-text id="deliverAddress"> str. Alexandru Lapusneanu nr. 7-9 </ion-text>
-                    </ion-card-content>
-      
-                    <ion-card-content no-padding >
-                        <br/> <ion-text id="pickupHours"> Available Pickup Hours</ion-text>
-                    </ion-card-content>
-                    <ion-card-content no-padding>
-                       <ion-text>Monday, 12:30 - 14:00</ion-text> 
-                      </ion-card-content>
-                      <ion-card-content no-padding>
-                          <ion-text>Thurday, 12:30 - 14:00 , 16:30 - 17:30</ion-text>
-                        </ion-card-content>
-                        <ion-button  size="large" id="acceptCard" (click)="go()" expand="full" fill="clear" >Accept</ion-button>
-                  </ion-label>
-                  
-                </ion-item>
-              
-              </ion-card>
-            </ion-col>
-          </ion-row>
-      
-      </ion-grid>
 </ion-content>
 
