--- a/DLivr/src/app/pages/register/register.page.html
+++ b/DLivr/src/app/pages/register/register.page.html
@@ -48,6 +48,15 @@
               <div *ngIf="f.email.errors.email">* Email must be a valid email address</div>
           </div>
 
+          <ion-item class="form-group">
+            <ion-icon name="flag"></ion-icon>
+            <ion-input type = "text" formControlName= "country" placeholder = "Country" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.country.errors }"></ion-input>
+          </ion-item>
+          <div  style="color:red; font-size: 12px;" *ngIf="submitted && f.country.errors" class="invalid-feedback">
+              <div *ngIf="f.country.errors.required">* Country is required</div>
+              <div *ngIf="f.country.errors.pattern">* Country must have only characters</div>
+          </div>
+
          <ion-item class="form-group">
             <ion-icon name="lock"></ion-icon>
             <ion-input type = "password" formControlName = "password" placeholder = "Password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }"></ion-input>
